# apk2sbom

./: README.md  setup.cfg
apk2sbom/: __init__.py  apkin.py  cdx.py  license.py  main.py  out  spdx.py  statics.py
apk2sbom/cache/: apkindex.tgz
