[metadata]
name = apk2sbom
version = 0.10
author = Eliot Lear
author_email = lear@cisco.com
url = https://github.com/sbomtools/apk2sbom
description = Generate an SBOM from an alpine image
long_description = file:README.md
long_description_content_type= text/markdown
license = BSD 3-Clause License

[options]
packages = apk2sbom
python_requires = >=3.8
install_requires =
    docker

[options.package_data]
apk2sbom = data/*

[options.entry_points]
console_scripts =
   apk2sbom = apk2sbom.main:cli
